	  and having a list of channels to autojoin. (#76)

    * Only update autojoin settings when ctrlproxy is completely logged in. 
	  (#113)

    * Increase the debug level at which messages about joins/parts are 
	  logged.

    * Put linestack state data in separate files. This will make it possible 
	  in the future to remove some of the state files.

  BUG FIXES

    * Don't "forget" listener password.

	* Don't add all existing networks to autoconnect list. (#90)

	* Fix a couple of minor memory leaks.

	* Store CTCP ACTIONs for replication.

	* Warn about unknown networks listed for listeners rather than crash.

	* Fixed segfault when no conversion is being used. Patch by Ashish Shukla.

	* Don't use AI_ADDRCONFIG if it's not provided by the system.  (#179)

	* Fix segfault when address type is not reachable at the moment. (#177)
	  Patch by wahjava@gmail.com.

	* Abort startup when one or more listener ports are already in use. 
	  (#175)

	* Fix crash bug when client shuts down correctly. (#176)

Ctrlproxy 3.0.5 2007-12-07

  IMPROVEMENTS
  
    * Integrate auto-away module into the core.

    * New settings ``autosave'', ``replication'', ``learn-nickserv'', 
      ``learn-network-name'', ``admin-log'', ``admin-user''.

    * Warn about unknown configuration file settings. (#15)

    * Support prefixing all lines with the time ("report-time = always"). (#169)

    * Allow using expansions in log file names for irssi. (#149)

  BUG FIXES

    * Handle 275 response correctly.

    * Fix memory error. (#170)

    * Fix several memory leaks.

Ctrlproxy 3.0.4 2007-11-24

  IMPROVEMENTS

    * Add ctrlproxy-admin command for command-line access to the admin network.

    * Send message to the client when ctrlproxy connects to the network.

    * Announce number of clients/channels during client login. (#162)

    * Add "set" command in the administration interface, including 
      initial settings "log_level", "motd-file" and "report-time". (#6)
